# Week7_RAG-complaint-chatbot

./: .gitignore  README.md  app.py  gradio-app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
notebooks/: eda.ipynb  eda_task2.ipynb
notebooks/vector_store/sample_chroma/: chroma.sqlite3
src/: config.py  load_prebuilt.py  preprocessor.py  rag_pipeline.py  temp_inspect_parquet.py  vector_store_builder.py
tests/: test.py  test_rag_pipeline.py
